# PDAAAL

./: CMakeLists.txt
src/include/: CMakeLists.txt  pdaaal-config.cmake.in
src/pdaaal/: CegarPdaFactory.h  Reducer.cpp  Reducer.h
src/pdaaal-bin/: CMakeLists.txt
